fix modal overflow on mobile

--- a/app/components/Header/index.module.css
+++ b/app/components/Header/index.module.css
@@ -67,6 +67,7 @@ nav.secondary {
   border: none;
   transform: translateX(100%);
   transition: transform 200ms ease-in-out;
+  overflow-y: auto;
 }
 .modal[open] {
   transform: translateX(0);
@@ -76,9 +77,7 @@ nav.secondary {
   width: min(30em, 100vw);
   margin-left: auto;
   margin-right: 0;
-  height: 100%;
   background: var(--color-white);
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
@@ -99,6 +98,7 @@ nav.secondary {
   .modal .wrapper {
     width: 100vw;
     padding-top: calc(4rem + 2 * var(--page-margin));
+    padding-bottom: 2rem;
   }
   .modal header {
     display: none;
@@ -145,5 +145,6 @@ nav.mobile a {
   padding: 0.5em;
 }
 .reservationButton {
-  align-self: center;
+  margin-block: 1rem;
+  align-self: end;
 }
